{
  "version": 4,
  "terraform_version": "1.9.7",
  "serial": 78,
  "lineage": "ea14e66a-8e89-ff6a-f7b1-57f2d61bd24f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d98f570106e340cb",
            "arn": "arn:aws:ec2:us-east-1:471112749395:elastic-ip/eipalloc-0d98f570106e340cb",
            "associate_with_private_ip": "10.0.0.50",
            "association_id": "eipassoc-0c2964f8322272b77",
            "domain": "vpc",
            "id": "eipalloc-0d98f570106e340cb",
            "instance": "i-0eab21614b3ed1591",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0af5c5f1cf1a93424",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_ip": "10.0.0.50",
            "public_dns": "ec2-54-160-195-186.compute-1.amazonaws.com",
            "public_ip": "54.160.195.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.Ubuntu_server",
            "aws_network_interface.my_nic",
            "aws_security_group.my_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "Ubuntu_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0866a3c8686eaeeba",
            "arn": "arn:aws:ec2:us-east-1:471112749395:instance/i-0eab21614b3ed1591",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0eab21614b3ed1591",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my-kpair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0af5c5f1cf1a93424"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0af5c5f1cf1a93424",
            "private_dns": "ip-10-0-0-50.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.50",
            "public_ip": "54.160.195.186",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0f5e0fbf8e64f8e0a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5dfbc91de29d29e",
            "tags": {
              "name": "Instance running on Ubuntu Server"
            },
            "tags_all": {
              "name": "Instance running on Ubuntu Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0470c4f05890626b5"
            ]
          },
          "dependencies": [
            "aws_network_interface.my_nic",
            "aws_security_group.my_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112749395:internet-gateway/igw-00315564d3a354355",
            "id": "igw-00315564d3a354355",
            "owner_id": "471112749395",
            "tags": {
              "name": "Our Internet Gateway"
            },
            "tags_all": {
              "name": "Our Internet Gateway"
            },
            "vpc_id": "vpc-056061ff4c8a31977"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "my_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112749395:network-interface/eni-0af5c5f1cf1a93424",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c5d35494556e25c6",
                "device_index": 0,
                "instance": "i-0eab21614b3ed1591"
              }
            ],
            "id": "eni-0af5c5f1cf1a93424",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:93:4b:68:6f:19",
            "owner_id": "471112749395",
            "private_ip": "10.0.0.50",
            "private_ip_list": [
              "10.0.0.50"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0470c4f05890626b5"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b5dfbc91de29d29e"
          },
          "dependencies": [
            "aws_security_group.my_sg",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "my_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112749395:route-table/rtb-02894e53124bf472a",
            "id": "rtb-02894e53124bf472a",
            "owner_id": "471112749395",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00315564d3a354355",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "name": "Our Route Table"
            },
            "tags_all": {
              "name": "Our Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-056061ff4c8a31977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06037f778dbcd8375",
            "route_table_id": "rtb-02894e53124bf472a",
            "subnet_id": "subnet-0b5dfbc91de29d29e"
          },
          "dependencies": [
            "aws_internet_gateway.my_ig",
            "aws_route_table.my_rt",
            "aws_subnet.my_subnet",
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112749395:security-group/sg-0470c4f05890626b5",
            "description": "Web Traffic Allowance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0470c4f05890626b5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20241010165850727300000001",
            "name_prefix": "terraform-",
            "owner_id": "471112749395",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Our Security Group"
            },
            "tags_all": {
              "Name": "Our Security Group"
            },
            "timeouts": null,
            "vpc_id": "vpc-056061ff4c8a31977"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "my_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112749395:subnet/subnet-0b5dfbc91de29d29e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5dfbc91de29d29e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "471112749395",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Our Subnet"
            },
            "tags_all": {
              "Name": "Our Subnet"
            },
            "vpc_id": "vpc-056061ff4c8a31977"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:471112749395:vpc/vpc-056061ff4c8a31977",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0acbf175442f4278a",
            "default_route_table_id": "rtb-00d1d965db7be139b",
            "default_security_group_id": "sg-0cb04aed275b38e7a",
            "dhcp_options_id": "dopt-0e5d8f727106ffa4f",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-056061ff4c8a31977",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00d1d965db7be139b",
            "owner_id": "471112749395",
            "tags": {
              "Name": "Our VPC"
            },
            "tags_all": {
              "Name": "Our VPC"
            }
          }
        }
      ]
    }
  ]
}